ARROW-16436: [C++][Python] Datasets should not ignore CSV autogenerate_column_names